fix floating headers not aligning

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportRender.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportRender.css
@@ -45,5 +45,6 @@
 .fr-r-tC{vertical-align:top;padding:0;margin:0;}
 .fr-r-tCI{margin:0;width:100%;height:100%;}
 .fr-render-tablix{border-collapse:collapse;padding:0;margin:0;table-layout:fixed;}
+.fr-render-tablix-header{ display: table; position: absolute; top: 0px; left: 0px; padding: 0; margin: 0; border-collapse: collapse;}
 .fr-r-fS{width:100%;height:100%;}
 .fr-lazyNext{color:blue;font-size:large;}
